operator/pkg/gateway-api/testdata/gateway/gateway-secret-missing-reference-grant/input/gateway-secret-missing-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-secret-missing-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
